openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wso2-apim
  labels:
    app: wso2-apim
