openshift/07-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apim-nginx
  namespace: wso2-apim
  labels:
    app: apim-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apim-nginx
  template:
    metadata:
      labels:
        app: apim-nginx
    spec:
      serviceAccountName: wso2-apim-sa
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: apim-mgmt
              containerPort: 9080
            - name: apim-gw
              containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/apimHA.conf
              subPath: apimHA.conf
          readinessProbe:
            tcpSocket:
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
