openshift/09-service-apim-node2.yaml
# ClusterIP service for apim-node2 (offset=1, all ports +1).
# Used for:
#   - nginx upstream (ports 9444, 8244)
#   - cross-node throttling from node1 (ports 5673, 9612, 9712)
apiVersion: v1
kind: Service
metadata:
  name: apim-node2
  namespace: wso2-apim
  labels:
    app: apim-node2
spec:
  type: ClusterIP
  selector:
    app: apim-node2
  ports:
    - name: https-mgmt
      port: 9444
      targetPort: 9444
    - name: https-gw
      port: 8244
      targetPort: 8244
    - name: jms
      port: 5673
      targetPort: 5673
    - name: tm-tcp
      port: 9612
      targetPort: 9612
    - name: tm-ssl
      port: 9712
      targetPort: 9712
