openshift/10-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: apim-nginx
  namespace: wso2-apim
  labels:
    app: apim-nginx
spec:
  type: ClusterIP
  selector:
    app: apim-nginx
  ports:
    - name: apim-mgmt
      port: 9080
      targetPort: 9080
    - name: apim-gw
      port: 8080
      targetPort: 8080
